[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Usables/CollapsingBridge.png" type="Texture" id=1]
[ext_resource path="res://World/Usables/CollapsingBridge.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 8 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 80.0

[node name="CollapsingBridge" type="StaticBody2D"]
z_index = -1
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
z_index = 1
shape = SubResource( 1 )

[node name="BridgeSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="BridgeSprite"]
show_behind_parent = true
margin_left = -96.0
margin_right = 96.0
margin_bottom = 465.0
color = Color( 0.231373, 0.0941176, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="BridgeSprite"]
show_behind_parent = true
margin_left = -96.0
margin_top = 150.0
margin_right = 548.0
margin_bottom = 494.0
color = Color( 0.231373, 0.0941176, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollapseDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollapseDetector"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[connection signal="body_entered" from="CollapseDetector" to="." method="_on_CollapseDetector_body_entered"]
